Added quote api.

--- a/main.html
+++ b/main.html
@@ -22,9 +22,9 @@
           <h4 id="current">Overcast clouds. It is currently 4°</h4>
         </div>
       </div>
-      <div class="box">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, neque iure exercitationem cupiditate quidem eaque quisquam vero quasi iusto earum nisi recusandae minus quas voluptates amet
-        laborum, itaque, voluptas nihil?
+      <div id="quote" class="center stack">
+        <p id="content"></p>
+        <p id="author"></p>
       </div>
     </main>
     <footer>
