--- a/main.html
+++ b/main.html
@@ -38,5 +38,8 @@
         </button>
       </div>
     </footer>
+    <aside>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, asperiores.</p>
+    </aside>
   </body>
 </html>
