Viewport scaling test.

--- a/main.html
+++ b/main.html
@@ -19,12 +19,12 @@
         <h2 id="greet">Good Afternoon, Joe</h2>
         <div id="weather" class="center stack">
           <h3 id="current">Overcast clouds. It is currently 4</h3>
-          <img id="weatherIcon" src="assets/weather/03b.svg" draggable="false" />
+          <img id="weatherIcon" src="assets/weather/03.svg" draggable="false" />
         </div>
       </div>
       <div id="quote" class="center stack">
-        <p id="content"></p>
-        <p id="author"></p>
+        <p id="content">"The three great essentials to achieve anything worthwhile are: Hard work, Stick-to-itiveness, and Common sense."</p>
+        <p id="author">––– Thomas Edison</p>
       </div>
     </main>
     <footer>
